--- a/02-ww-gateway-9527/src/main/resources/bootstrap-prod.yml
+++ b/02-ww-gateway-9527/src/main/resources/bootstrap-prod.yml
@@ -14,6 +14,9 @@ spring:
         namespace: prod
         # 服务注册中心组别名称
         group: DEFAULT_GROUP
+        # Nacos 用户名和密码
+        username: ${nacos.username}
+        password: ${nacos.password}
       config:
         # 配置中心地址
         server-addr: ${spring.cloud.nacos.discovery.server-addr}
