--- a/03-ww-auth-3100/pom.xml
+++ b/03-ww-auth-3100/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>03-ww-auth-3100</artifactId>
 
     <parent>
-        <artifactId>WangWang-Home</artifactId>
+        <artifactId>Wang-Wang-Home</artifactId>
         <groupId>cn.wickson.tech.collective</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
