--- a/03-ww-auth-3100/src/main/resources/bootstrap-dev.yml
+++ b/03-ww-auth-3100/src/main/resources/bootstrap-dev.yml
@@ -11,18 +11,21 @@ spring:
         # 服务注册中心地址
         server-addr: http://localhost:8848
         # 服务注册中心命名空间
-        namespace: prod
+        namespace: dev
         # 服务注册中心组别名称
         group: DEFAULT_GROUP
+        # Nacos 用户名和密码
+        username: ${nacos.username}
+        password: ${nacos.password}
       config:
         # 配置中心地址
         server-addr: ${spring.cloud.nacos.discovery.server-addr}
         # 配置文件格式
         file-extension: yaml
         # 命名空间配置
-        namespace: prod
+        namespace: ${spring.cloud.nacos.discovery.namespace}
         # 指定组名为 DEFAULT_GROUP
-        group: DEFAULT_GROUP
+        group: ${spring.cloud.nacos.discovery.group}
         # 共享配置
         shared-configs:
           - application-${spring.profiles.active}.${spring.cloud.nacos.config.file-extension}
