--- a/.gitignore
+++ b/.gitignore
@@ -7,14 +7,10 @@
 # BlueJ files
 *.ctxt
 
-# iml file
-*.iml
-
-# idea
-.idea
-
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
+target/
+classes/
 
 # Package Files #
 *.jar
@@ -28,3 +24,29 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+
+# ############################################ Vue ###########################################################
+.DS_Store
+node_modules
+/dist
+
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
