--- a/04-ww-module-system-3200/ww-module-system-boot/pom.xml
+++ b/04-ww-module-system-3200/ww-module-system-boot/pom.xml
@@ -30,7 +30,13 @@
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
 
-        <!-- loadbalancer负载均衡 -->
+        <!--feign声明式远程调用依赖包-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+
+        <!--loadbalancer负载均衡-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-loadbalancer</artifactId>
