--- a/03-ww-auth-3100/src/main/resources/bootstrap-dev.yml
+++ b/03-ww-auth-3100/src/main/resources/bootstrap-dev.yml
@@ -1,13 +1,12 @@
 # Port
 server:
   port: 3100
-
 # Spring Cloud
 spring:
   mvc:
-    # springboot2.6.x如果不加该配置会报错
+    # springboot 2.6.x 如果不加该配置会报错
     pathmatch:
-      matching-strategy: ant_path_matcher
+      matching-strategy: ANT_PATH_MATCHER
   cloud:
     # Nacos
     nacos:
@@ -18,23 +17,17 @@ spring:
         namespace: 6fdf31f9-20e2-411a-8ada-c2cf285879a1
         # 服务注册中心组别名称
         group: DEFAULT_GROUP
-        # Nacos 用户名和密码
-        username: ${nacos.username}
-        password: ${nacos.password}
         # 指定ip
         ip: 192.168.10.221
       config:
         # 配置中心地址
-        server-addr: ${spring.cloud.nacos.discovery.server-addr}
+        server-addr: http://139.9.202.135:4424
         # 配置文件格式
         file-extension: yaml
         # 命名空间配置
-        namespace: ${spring.cloud.nacos.discovery.namespace}
+        namespace: 6fdf31f9-20e2-411a-8ada-c2cf285879a1
         # 指定组名为 DEFAULT_GROUP
-        group: ${spring.cloud.nacos.discovery.group}
+        group: DEFAULT_GROUP
         # 共享配置
         shared-configs:
-          - application-${spring.profiles.active}.${spring.cloud.nacos.config.file-extension}
-
-knife4j:
-  enable: true
+          - application-dev.yaml
