--- a/01-ww-common/ww-common-core/pom.xml
+++ b/01-ww-common/ww-common-core/pom.xml
@@ -24,6 +24,13 @@
             <artifactId>jackson-core</artifactId>
         </dependency>
 
+        <!-- Mybatis Plus -->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <optional>true</optional>
+        </dependency>
+
         <!-- Alibaba Fastjson -->
         <dependency>
             <groupId>com.alibaba.fastjson2</groupId>
