Added common-mybatis modules

--- a/04-ww-module-system-3200/ww-module-system-boot/pom.xml
+++ b/04-ww-module-system-3200/ww-module-system-boot/pom.xml
@@ -69,6 +69,12 @@
             <groupId>cn.wickson.tech.collective</groupId>
             <artifactId>ww-common-web</artifactId>
         </dependency>
+
+        <!-- common mybatis -->
+        <dependency>
+            <groupId>cn.wickson.tech.collective</groupId>
+            <artifactId>ww-common-mybatis</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
