--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 
         <!-- DB && ORM -->
         <mysql.version>5.1.47</mysql.version>
-        <druid.version>1.1.10</druid.version>
+        <druid.version>1.2.4</druid.version>
         <mybatis.plus.version>3.5.3.1</mybatis.plus.version>
 
         <!-- api doc -->
@@ -161,6 +161,14 @@
                 <artifactId>ww-common-security</artifactId>
                 <version>${project.version}</version>
             </dependency>
+
+            <!-- common mybatis -->
+            <dependency>
+                <groupId>cn.wickson.tech.collective</groupId>
+                <artifactId>ww-common-mybatis</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+
 
             <!-- system-api -->
             <dependency>
