optimize system-user modules

--- a/04-ww-module-system-3200/ww-module-system-boot/pom.xml
+++ b/04-ww-module-system-3200/ww-module-system-boot/pom.xml
@@ -12,6 +12,13 @@
     <artifactId>ww-module-system-boot</artifactId>
 
     <dependencies>
+        <!-- 单元测试 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <!-- Spring Cloud & Alibaba -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
