optimize system-user modules

--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,19 @@
                 <version>${fastjson.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.mapstruct</groupId>
+                <artifactId>mapstruct</artifactId>
+                <version>${mapstruct.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.mapstruct</groupId>
+                <artifactId>mapstruct-processor</artifactId>
+                <version>${mapstruct.version}</version>
+            </dependency>
+
+
             <!--API接口文档生成依赖包-->
             <dependency>
                 <groupId>com.github.xiaoymin</groupId>
