--- a/01-ww-common/ww-common-web/pom.xml
+++ b/01-ww-common/ww-common-web/pom.xml
@@ -18,6 +18,16 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+        </dependency>
+
         <!--引入参数校验依赖包-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
