--- a/04-ww-module-system-3200/ww-module-system-boot/pom.xml
+++ b/04-ww-module-system-3200/ww-module-system-boot/pom.xml
@@ -84,4 +84,15 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <finalName>${project.artifactId}</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring.boot.version}</version>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
