新增验证码

--- a/03-ww-auth-3100/pom.xml
+++ b/03-ww-auth-3100/pom.xml
@@ -71,6 +71,11 @@
             <groupId>cn.wickson.tech.collective</groupId>
             <artifactId>ww-common-web</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>cn.wickson.tech.collective</groupId>
+            <artifactId>ww-common-redis</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
