新增用户登录、登录日志信息

--- a/03-ww-auth-3100/src/main/resources/bootstrap-dev.yml
+++ b/03-ww-auth-3100/src/main/resources/bootstrap-dev.yml
@@ -6,8 +6,11 @@ server:
 
 # Spring Cloud
 spring:
+  # 可以使多个接口使用@FeignClient调用同一个服务
+  main:
+    allow-bean-definition-overriding: true
+  # springboot 2.6.x 如果不加该配置会报错
   mvc:
-    # springboot 2.6.x 如果不加该配置会报错
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
   cloud:
