--- a/04-ww-module-system-3200/ww-module-system-api/pom.xml
+++ b/04-ww-module-system-3200/ww-module-system-api/pom.xml
@@ -23,11 +23,13 @@
             <artifactId>feign-okhttp</artifactId>
         </dependency>
 
+        <!-- common core -->
         <dependency>
             <groupId>cn.wickson.tech.collective</groupId>
             <artifactId>ww-common-core</artifactId>
         </dependency>
 
+        <!-- common web -->
         <dependency>
             <groupId>cn.wickson.tech.collective</groupId>
             <artifactId>ww-common-web</artifactId>
