--- a/01-ww-common/ww-common-core/pom.xml
+++ b/01-ww-common/ww-common-core/pom.xml
@@ -37,6 +37,19 @@
             <artifactId>validation-api</artifactId>
         </dependency>
 
+        <!-- Web 相关 -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <scope>provided</scope> <!-- 设置为 provided，只有工具类需要使用到 -->
+        </dependency>
+
+        <dependency>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+            <scope>provided</scope> <!-- 设置为 provided，只有工具类需要使用到 -->
+        </dependency>
+
         <!-- Api文档 -->
         <dependency>
             <groupId>com.github.xiaoymin</groupId>
