--- a/04-ww-module-system-3200/ww-module-system-boot/src/main/resources/bootstrap-dev.yml
+++ b/04-ww-module-system-3200/ww-module-system-boot/src/main/resources/bootstrap-dev.yml
@@ -6,8 +6,11 @@ server:
 
 # Spring Cloud
 spring:
+  # 可以使多个接口使用@FeignClient调用同一个服务
+  main:
+    allow-bean-definition-overriding: true
+  # SpringBoot 2.6.x 如果不加该配置会报错
   mvc:
-    # SpringBoot 2.6.x 如果不加该配置会报错
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
   cloud:
@@ -21,7 +24,7 @@ spring:
         # 服务注册中心组别名称
         group: DEFAULT_GROUP
         # 指定ip
-#        ip: 192.168.10.221
+      #        ip: 192.168.10.221
       config:
         # 配置中心地址
         server-addr: http://139.9.202.135:4424
