--- a/03-ww-auth-3100/pom.xml
+++ b/03-ww-auth-3100/pom.xml
@@ -43,6 +43,12 @@
             <artifactId>spring-cloud-starter-loadbalancer</artifactId>
         </dependency>
 
+        <!-- SpringCloud Alibaba Sentinel -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+        </dependency>
+
         <!-- 应用服务后台健康监控管理依赖包 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
