--- a/04-ww-module-system-3200/ww-module-system-boot/pom.xml
+++ b/04-ww-module-system-3200/ww-module-system-boot/pom.xml
@@ -49,6 +49,18 @@
             <artifactId>spring-cloud-starter-loadbalancer</artifactId>
         </dependency>
 
+        <!-- Sentinel流量控制、熔断降级 -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+        </dependency>
+
+        <!-- Sentinel规则持久化至Nacos配置 -->
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-datasource-nacos</artifactId>
+        </dependency>
+
         <!-- 应用服务后台健康监控管理依赖包 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
